--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,10 +1,10 @@
 name: Docker Image CI
 
 on:
-  workflow_dispatch:
   push:
-    tags:
-      - "v*.*.*"
+    paths:
+      - 'Dockerfile'
+      - '.github/workflows/docker-image.yml'
 env:
   IMAGE_NAME: opensumi/opensumi-web
   TZ: Asia/Shanghai
