--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,8 +18,8 @@ jobs:
         node-version: [18.x]
     steps:
       - uses: actions/checkout@v4
-      - name: Login
-        uses: docker/login-action@v1
+      - name: Login to Alibaba Cloud Container Registry
+        uses: docker/login-action@v3.4.0
         with:
           registry: registry.cn-hangzhou.aliyuncs.com
           username: ${{ secrets.ALIYUN_REGISTRY_USERNAME }}
