--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -45,6 +45,6 @@ jobs:
           file: ./Dockerfile
           platforms: ${{ matrix.arch }}
           push: true
-          tags: registry.cn-hangzhou.aliyuncs.com/dkyy/opensumi:${{ matrix.language }}
+          tags: registry.cn-hangzhou.aliyuncs.com/dkyy/opensumi:${{ matrix.arch }}
           cache-from: type=gha
           cache-to: type=gha
